--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+  --fonte-padrao: Verdana, Geneva, Tahoma, sans-serif;
+  --fonte-titulo: 'Passion One', cursive;
+  --fonte-conteudo: 'Sriracha', cursive;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -8,6 +18,7 @@
 html, body{
   height: 100vh;
   background-color: darkgrey;
+  font-family: var(--fonte-padrao);
 }
 
 header{
@@ -19,6 +30,8 @@ header{
 header > h1{
   padding-top: 50px;
   font-variant: small-caps;
+  font-family: var(--fonte-titulo);
+  font-size: 8vw;
 }
 
 header > p{
@@ -40,6 +53,8 @@ section{
   padding-bottom: 10vh;
   line-height: 2em;
   padding-left: 30px;
+  font-family: var(--fonte-conteudo);
+  font-size: 4vw;
 }
 
 section.normal{
@@ -53,7 +68,8 @@ section.imagem{
 }
 
 section.imagem > p{
-  width: 400px;
+  display: inline-block;
+  padding: 5px;
   background-color: #0000004f;
 }
 
