--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -57,6 +57,10 @@ section{
   font-size: 3.5vw;
 }
 
+section > p{
+  padding-bottom: 2em;
+}
+
 section.normal{
   background-color: #ffffff;
   color: #000000;
@@ -65,12 +69,28 @@ section.normal{
 section.imagem{
   background-color: #1f1f1f;
   color: #ffffff;
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 section.imagem > p{
   display: inline-block;
   padding: 5px;
-  background-color: #0000004f;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+  background-image: url('../imagens/background001.jpg');
+  background-position: right center;
+  background-repeat: no-repeat;
+}
+
+section#img02{
+  background-image: url('../imagens/background002.jpg');
+  background-position: right center;
+  
 }
 
 footer{
