--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -90,7 +90,7 @@ section#img01{
 section#img02{
   background-image: url('../imagens/background002.jpg');
   background-position: right center;
-  
+  background-repeat: no-repeat;
 }
 
 footer{
